# dirtbike-dash-rust

./: .gitignore  README.md  vcan.sh
dirtbike_dash/: Cargo.toml
dirtbike_dash/src/: backend.rs  battery_props  build.rs  can.rs  gps.rs  main.rs  sim.rs  soc.rs
dirtbike_dash/src/ui/: main.slint
