[package]
name = "dirtbike_dash"
version = "0.1.0"
edition = "2024"

[[bin]]
name="test"
path="src/main.rs"

[dependencies]
cxx-qt = "0.8.1"
gpsd = "0.1.2"
can = { version = "0.2.0", optional = true }
socketcan = { version = "3.5", optional = true }
anyhow    = "1"
bitflags   = "2.11.0"
gpsd_client = {version = "0.1.5", optional = true}
gpsd_proto = {version = "1.0.0", optional = true}
ndarray = { version = "0.17.2"}
num = {version = "0.4.3"}
polyfit-rs = {version = "0.2.2"}
fs2 = {version = "0.4.3"}
round = {version = "0.1.2"}
slint = "1.15.1"
slint-build = "1.15.1"

[features]
default = []

# requires gpsd installed
gps = ["dep:gpsd_proto"]

# requires socketcan installed
can = ["dep:can", "dep:socketcan"]

# requires can working 
sim = ["can"]

# soc requires can obviously
soc = ["can"]

# used for the match cases for the bike its implemented on
db = ["soc"] # uses values for dirtbike
b6 = ["soc"] # uses values for bolt 6. More error, packs are old
bb = ["soc"] # uses values for baby bolt.

